--- a/portlet/web/src/main/webapp/skin/portal/webui/component/UINavigationPortlet/VistaStylesheet.css
+++ b/portlet/web/src/main/webapp/skin/portal/webui/component/UINavigationPortlet/VistaStylesheet.css
@@ -132,7 +132,7 @@
 
 .UINavigationPortlet .ScrollButtons {
 	float: right;
-	padding: 5px 0px;
+	padding: 5px;
 	display: none;
 }
 
