--- a/web/eXoSkinVista/src/main/webapp/skin/VistaSkin/webui/component/UISelector/UINodeIconSelector/Stylesheet.css
+++ b/web/eXoSkinVista/src/main/webapp/skin/VistaSkin/webui/component/UISelector/UINodeIconSelector/Stylesheet.css
@@ -12,9 +12,9 @@
 .UINodeIconSelector .SelectedIconInfo {
   background: white;
   border: solid 1px #b7b7b7 ;
-  height: 35px;
+  height: 32px;
   margin-top: 6px;
-  line-height: 35px;
+  line-height: 32px;
 }
 
 .UINodeIconSelector .SelectedIconInfo .UIFormInputSet .FieldContainer{
@@ -75,9 +75,12 @@
   color: #058EE6;
 }
 
-.UIMaskWorkspace .UIForm .HorizontalLayout .UINodeIconSelector .UIFormInputSet {
-	width: auto;
-	padding: 0px;
+.UINodeIconSelector .ItemDetailList .SelectedIconInfo .UIFormInputSet {
+	padding-bottom: 0px;
+}
+
+.UINodeIconSelector .ItemDetailList .SelectedIconInfo .UIFormInputSet {
+	padding-bottom: 0px;
 }
 
 .UINodeIconSelector .CategoryContainer .OverflowContainer {
